script that starts a Flask web application:

--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,6 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<HTML>
+<!DOCTYPE html>
+<HTML lang = "en">
 	<HEAD>
+		<TITLE>Number template</TITLE>
 	</HEAD>
 	<BODY>
 		<H1>Number: {{ n }}</H1>
