--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,6 +1,7 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
-<HTML>
+<!DOCTYPE html>
+<HTML lang = "en">
 	<HEAD>
+		<TITLE>Odd or even</TITLE>
 	</HEAD>
 	<BODY>
 		{% if n is even %}
